# langchain-agent-1

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_ops.pckl
docs/: development.md
src/agent_1/: __init__.py  agent.py  client.py  config.py  graph.py  main.py  prompts.py  server.py  tools.py
tests/: test_agent.py
